# whisper-sync

./: CRITIQUE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
src/: delivery.rs  filter.rs  inbox.rs  lib.rs  main.rs  plato_transport.rs  whisper.rs
tests/: test_delivery.rs  test_whisper.rs
