[package]
name = "whisper-sync"
version = "0.1.0"
edition = "2021"
description = "Murmurer's ambient whisper protocol over PLATO rooms"
license = "MIT"
authors = ["SuperInstance"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]

[[bin]]
name = "whisper-sync"
path = "src/main.rs"
